# Riders-communities

./: .env.example  .gitignore  README.md  db.sqlite3  pyproject.toml  rider-community-app-prd.md
apps/api/: main.py
apps/contact/: admin.py  api.py  apps.py  models.py
apps/contact/migrations/: 0001_initial.py  0002_add_callback_inquiry_kind.py  0003_inquiryissue_dynamic_kinds.py
apps/ev/: admin.py  api.py  apps.py  kml_importer.py  models.py
apps/ev/management/commands/: import_kml.py
apps/ev/migrations/: 0001_initial.py  0002_buy_ev_plan.py  0003_seed_buy_ev_demo.py  0004_ev_plan_interest.py  0005_ev_interest_buy_plan_fk.py  0006_rent_ev_plan_and_interest_fk.py  0007_partner_image_upload.py
apps/legal/: views.py
apps/legal/templates/legal/: csae_standards.html  privacy.html
apps/posts/: admin.py  api.py  apps.py  models.py
apps/posts/management/commands/: seed_demo_riders.py
apps/posts/migrations/: 0001_initial.py  0002_post_meta_options.py  0003_post_reactions.py  0004_post_comments.py
apps/rider_auth/: admin.py  api.py  apps.py  models.py
apps/rider_auth/migrations/: 0001_initial.py  0002_riderprofile_bio.py
config/: asgi.py  settings.py  urls.py
deploy/digitalocean/: SETUP.txt  nginx-rider.conf  rider-backend.service
